# amman-python-401d1

./: midterm-projects-logitics.md
class-01/: README.md
class-01/demo/: class_notes_example.md
class-01/lab/: README.md
class-02/: DISCUSSION.md
class-02/demo/fizz_buzz/: pyproject.toml
class-02/demo/recursion/: pyproject.toml
class-03/demo/exceptions/: exceptions.ipynb
class-03/demo/file-io/: file_io.ipynb
class-03/lab/: README.md
class-04/demo/pets-world/: pyproject.toml
class-04/lab/: README.md
class-06/demo/: big_O.py
class-07/flow/: flo.py
class-07/lab/: README.md
class-08/lab/: README.md
class-09/demo/: game.py  player_bot.py
class-09/lab/: README.md
class-11/: DISCUSSION.md
class-11/demo/numpy-arrays/: img.ipynb  is_diagonal.ipynb  pyproject.toml  vectorization.ipynb
class-11/lab/: README.md
class-12/: DISCUSSION.md
class-12/demo/: shelter.py
class-13/: DISCUSSION.md
class-13/lab/: README.md
class-14/lab/: README.md
class-16/lab/: README.md
class-17/: DISCUSSION.md
class-18/: DISCUSSION.md
class-18/lab/: README.md
class-19/demo/fakey/: contacts.csv  fake_text.txt  pyproject.toml
class-19/demo/fakey/fakey/: fakey.py
class-27/lab/: README.md
class-28/lab/: README.md
class-29/: DISCUSSION.md
class-32/lab/: README.md
class-33/lab/: README.md
class-34/lab/: README.md
class-35/: LAB.md
class-35/resources/: graphs.md
class-36/demo/: reverse_traverse.md
class-37/demo/es6/: es6.js
class-39/: DISCUSSION.md
class-39/lab/: README.md
class-41/: DISCUSSION.md
class-42/demo/: linked_list.py
(+164 files in other folders)
