[tool.poetry]
name = "numpy-arrays"
version = "0.1.0"
description = ""
authors = ["Ahmad Alawad <ahmad.alawad.sf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
matplotlib = "^3.3.1"
jupyterlab = "^2.2.6"

[tool.poetry.dev-dependencies]
numpy = "^1.19.1"
matplotlib = "^3.3.1"
jupyterlab = "^2.2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
